<resources>
    <string name="app_name">小卫快报</string>
    <string name="pull_to_refresh">继续下拉</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_finish">刷新完成</string>
    <string name="load_full">已加载全部</string>
    <string name="load_more_news">查看更多新闻</string>
    <string name="load_finish">加载完成</string>
    <string name="load_fail">加载失败，请重试</string>
    <string name="loading_more">加载中</string>
    <string name="load_no_net">当前网络不可用，无法刷新</string>
    <string name="return_to_home">松开返回首页</string>
    <string name="news_portal_title_bar_pop_text">为您推荐%s条更新</string>
    <string name="news_portal_title_bar_pop_text_time_out">当前网络不可用稍后刷新</string>
    <string name="news_portal_title_bar_pop_text_no_more">木有了，小编正在赶稿中...</string>
    <string name="news_portal_title_bar_foot_text_no_more">暂无更多内容</string>
    <string name="time_years_before">年前</string>
    <string name="time_mouths_before">月前</string>
    <string name="time_days_before">天前</string>
	<string name="time_hours_before">小时前</string>
	<string name="time_minutes_before">分钟前</string>
	<string name="time_justnow">刚刚</string>
	<string name="time_half_hour">半小时前</string>
	<string name="time_yesterday">昨天</string>
	<string name="time_day_before_yesterday">前天</string>
	<string name="news_portal_tip_text">%s看到这里 点击刷新</string>
	<string name="news_portal_tip_text_minute_before">刚刚</string>
	<string name="news_portal_tip_text_hour_before">%s小时前</string>
	<string name="news_portal_tip_text_day_before">%s天前</string>
	<string name="news_portal_zhongmei_text1">新文章随时提醒</string>
	<string name="news_portal_zhongmei_text2">从这些众媒号开始吧！</string>
<string name="add_search">搜你想搜的</string>
    <string name="apull_net_error_title">联网失败，点击屏幕刷新</string>
    <string name="apull_net_error_summary">请检查网络设置后重新尝试联网升级</string>
    <string name="apull_net_error_settings">网络设置</string>
    <string name="video_error_notsupport">视频播放失败</string>
    <string name="video_error_net">网络不可用</string>
    <string name="video_error_timeout">网络状态不佳，继续等待请按播放键</string>
    <string name="video_wifinet_tip">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="video_btn_cancel">停止播放</string>
    <string name="video_btn_ok">继续播放</string>
    <string name="video_btn_replay">重播</string>
    <string name="video_360movie_host">http://s.api.app.tvfanqie.com/inner/video/mini?id=%1$s&amp;appid=360_search&amp;token=e8a6671d46f1752283fca781d4ede9e9</string>
	<string name="video_screenon">全屏</string>
	<string name="video_screenoff">取消</string>
	<string name="video_timeswatched">%s次播放</string>
	<string name="video_zhuanti_top">置顶</string>
	<string name="video_detail_recommend">相关推荐</string>
	<string name="tip_inputnone">总得先填点啥吧~</string>
	<string name="tip_comment_fail">提交评论失败</string>
	<string name="tip_comment_success">评论成功</string>
	<string name="tip_comment_maxlength">超过最大评论字数限制，请修改后再重新发送</string>
	<string name="tip_comment_overlength">超出字数限制，请调整后再发</string>
	<string name="tip_comment_nonet">没有网络连接，无法发表评论</string>
	<string name="comment_zanguo">您已经赞过</string>
	<string name="comment_whole">全部评论</string>
	<string name="comment_info">详情</string>
	<string name="comment_send">发表</string>
	<string name="newssdk_comment_pullclose">下拉关闭评论</string>
	<string name="newssdk_tip_loading">正在加载</string>
	<string name="news_img_reload">点击屏幕,重新加载</string>
	<string name="zhibo">直播</string>
	<string name="zhibo_watches">%s人正在观看</string>
	<string name="zhibo_watch_count">%s人参与</string>
    <string name="huajiao_watches">%s人在看</string>
    <string name="news_imagenum">%s图</string>
    <string name="news_wan">万</string>
    <string name="news_comment">%s评论</string>
    <string name="news_imagerecommend">图片推荐</string>
    <string name="news_native_recommend">精彩推荐</string>
    <string name="news_native_newcomment">最新评论</string>
    <string name="news_native_hotcomment">热门评论</string>
    <string name="newssdk_webview_takephotos">拍照</string>
    <string name="newssdk_webview_photos">相册</string>
	<string name="news_channel_edit_mychannel">我的频道</string>
	<string name="news_channel_edit_morechannel">频道推荐</string>
	<string name="news_channel_edit_tips">拖拽可以排序</string>
	<string name="news_channel_edit_edit">编辑</string>
	<string name="news_channel_edit_finish">完成</string>
    <string name="ignore_reason_title">可选理由，精准屏蔽</string>
    <string name="ignore_dont_care">不感兴趣</string>
    <string name="ignore_reason_title_select">已选%s理由</string>
    <string name="ignore_makesure">确定</string>
    <string-array name="ignore_news_array">
        <item>重复、旧闻</item>
        <item>内容质量差</item>
        <item>来源：source</item>
    </string-array>
    <string-array name="ignore_app_array">
        <item>讨厌下载</item>
        <item>appName</item>
        <item>广告推荐</item>
        <item>看过了</item>
        <item>数据网络</item>
    </string-array>
    <string-array name="ignore_mv_array">
        <item>广告推荐</item>
        <item>看过了</item>
        <item>数据网络</item>
    </string-array>
    <string-array name="ignore_apull_news_array">
        <item>重复、旧闻</item>
        <item>内容质量差</item>
        <item>来源：source</item>
        <item>type分类</item>
        <item>看过了</item>
    </string-array>
    <string name="newssdk_app_download_immediately">立即下载</string>
    <string name="newssdk_app_download_pause">暂停下载</string>
    <string name="newssdk_app_download_cancel">取消下载</string>
    <string name="newssdk_app_download_resume">继续下载</string>
    <string name="newssdk_app_download_install">安装</string>
    <string name="newssdk_app_download_installing">安装中</string>
    <string name="newssdk_app_download_open">打开应用</string>
    <string name="newssdk_app_download_progress">下载中...%d%%</string>
    <string name="newssdk_app_start_downloading">正在下载“%s”</string>
    <string name="newssdk_app_pause_downloading">“%s”下载已暂停</string>
    <string name="newssdk_app_cancel_downloading">“%s”下载已取消</string>
    <string name="newssdk_app_download">下载</string>
    <string name="newssdk_app_resume">继续</string>
    <string name="newssdk_app_open">打开</string>
    <string name="net_no_connect_tips">网络不给力，请稍后再试</string>
    <string name="tips_title">提示</string>
    <string name="tips_body_start_download">当前网络类型不是WiFi，下载会消耗您的数据网络流量，继续下载？</string>
    <string name="tips_body_cancel_download">确认要取消“%s”下载，并删除下载任务？</string>
    <string name="tips_net_error">网络不给力</string>
    <string name="tips_retry">重试</string>
    <string name="tips_nocomment">暂无评论,点击抢沙发</string>
    <string name="card_extra_tip_text">查看更多相关新闻</string>
    <string name="expend">广告</string>
    <string name="add_interest">添加兴趣</string>
    <string name="add_care">关注</string>
    <string name="has_add_care">已关注</string>
    <string name="has_add_interest">已添加</string>
    <string name="container10_tip">专题</string>
    <string name="container11_tip">今日要闻</string>
    <string name="container12_tip">猜你喜欢</string>
    <string name="app_install_number_1">%s</string>
    <string name="app_install_number_2">%s万</string>
    <string name="app_install_number_3">%s亿</string>
    <string name="app_install_default">人安装</string>
    <string name="app_see_default">人阅读</string>
    <string name="RetryMessge">没有网络，再好的应用也出不来~</string>
    <string name="Downloading">努力加载中&#8230;</string>
    <string name="click_ref">再试一试</string>
    <string name="text_up_action">收起</string>
    <string name="app_info_comment_score_tv_text">%1$s份</string>
    <string name="ten_thousand_times_download">%s次下载</string>
    <string name="update_time">"更新: "</string>
    <string name="corporation">"作者: "</string>
    <string name="app_info_version_text">版本号：</string>
    <string name="anonymous_user">匿名用户</string>
    <string name="comment_list_weight_text_1">热门评论</string>
    <string name="comment_reply_more_tv">查看全部回复（%1$s）</string>
    <string name="app_info_comment_reply">"<![CDATA[<font color='#1fbcb7'><user>%1$s</user></font><font color='#3e3e3e'><content>%2$s</content></font>]]>"</string>
    <string name="app_info_package_or_id_empty">包名或者id为空</string>
    <string name="text_no_app_info">暂时没有该应用的信息！</string>
    <string name="text_down_action">展开</string>
    <string name="app_info_brief_package_title">礼包活动</string>
    <string name="app_info_tag_text">应用标签</string>
    <string name="app_info_recommend">"<![CDATA[装了 <font color='#29a600'><content>%1$s</content></font> 的人还喜欢 ]]>"</string>
    <string name="app_info_version_title">版本信息</string>
    <string name="app_info_comment_score_title_text">用户评价</string>
    <string name="minute">分</string>
    <string name="app_info_comment_score_total_count_text_1">%1$s万份评分</string>
    <string name="app_info_comment_score_total_count_text">%1$s份评分</string>
    <string name="common_loading">正在载入</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_default">默认</string>
    <string name="hot_recommend">精品推荐</string>
    <string name="hot_app">热门应用</string>
    <string name="ingore">忽略</string>
    <string name="reserve">预订</string>
    <string name="get_hongbao">领红包</string>
    <string name="app_size">%sM</string>
    <string name="add_zhongmei">关注更多众媒号</string>
    <string name="add_zhongmei_small">添加关注</string>
    <string name="newssdk_webview_titlebar_title">详情</string>
    <string name="newssdk_webview_share_network_error">无法连接到服务器，请检查您的网络～</string>
    <string name="newssdk_share_dialog_text_timeline">微信朋友圈</string>
    <string name="newssdk_share_dialog_text_wechat">微信好友</string>
    <string name="newssdk_share_dialog_text_qq">QQ好友</string>
    <string name="newssdk_share_dialog_text_qqzone">QQ空间</string>
    <string name="newssdk_share_dialog_text_weibo">微博</string>
    <string name="newssdk_share_dialog_text_whatsapp">WhatsApp</string>
    <string name="newssdk_share_dialog_text_message">短信</string>
    <string name="newssdk_share_dialog_text_link">复制链接</string>
    <string name="newssdk_share_dialog_text_browser">浏览器中打开</string>
    <string name="newssdk_share_dialog_text_homepage">查看众媒号</string>
    <string name="newssdk_share_dialog_text_report">举报</string>
    <string name="newssdk_share_dialog_text_more">更多</string>
    <string name="newssdk_share_dialog_text_cancel">取消</string>
    <string name="newssdk_share_dialog_text_cancelshare">取消分享</string>
    <string name="newssdk_followguide_tips">你关注的，都在这里！</string>
    <string name="newssdk_followguide_channel">推荐    视频    热点    娱乐    科技    汽车    军事     财经    众媒号</string>
    <string name="newssdk_followguide_channel_behind">    娱乐    科技    汽车    军事     财经    众媒号</string>
    <string name="newssdk_new_channel_guide_tips">有新频道啦</string>
    <string name="newssdk_splash_skip">跳过\n广告</string>
    <string name="newssdk_push_popupwindow_ok">查看</string>
    <string name="newssdk_push_popupwindow_cancel">忽略</string>
    <string name="newssdk_sub_channel_all">全部</string>
    <string name="newssdk_local_select_city">点击选择其他城市</string>
        <string name="newssdk_local_may_city">您当前可能在</string>
        <string name="newssdk_local_cur_city">当前城市-</string>
        <string name="newssdk_local_city_list">城市列表</string>
        <string name="newssdk_local_look_local_news">选择城市，立即查看本地新闻</string>
                <string name="newssdk_local_pop_title">自动定位</string>
                <string name="newssdk_local_pop_content">系统检测您可能在%s,\n是否切换定位？</string>
                <string name="newssdk_local_pop_change">切换</string>
                <string name="newssdk_local_pop_cancel">取消</string>
</resources>