<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newssdk_sharedialog_popup_root1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f4f4f4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:overScrollMode="never"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="125dp">
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_timeline1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_timeline1"
                        android:src="@drawable/newssdk_share_button_timeline"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_timeline"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_wechat1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_wechat1"
                        android:src="@drawable/newssdk_share_button_wechat"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_wechat"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_qq1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_qq1"
                        android:src="@drawable/newssdk_share_button_qq"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_qq"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_qzone1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_qzone1"
                        android:src="@drawable/newssdk_share_button_qqzone"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_qqzone"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_weibo1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_weibo1"
                        android:src="@drawable/newssdk_share_button_weibo"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_weibo"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_whatsapp1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_whatsapp1"
                        android:src="@drawable/newssdk_share_button_whatsapp"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_whatsapp"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_message1"
                        android:src="@drawable/newssdk_share_button_message"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_message"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_link1"
                        android:src="@drawable/newssdk_share_button_link"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_link"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_browser1"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_browser1"
                        android:src="@drawable/newssdk_share_button_browser"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_browser"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <View
            android:layout_width="match_parent"
            android:background="#e8e8e8"
            android:layout_height="1dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="125dp">
            <LinearLayout
                android:id="@+id/newssdk_sharedialog_layout_home1"
                style="@style/newssdk_share_dialog_button_layout">
                <ImageView
                    android:id="@+id/newssdk_sharedialog_button_homepage1"
                    android:src="@drawable/newssdk_share_button_link"
                    style="@style/newssdk_share_dialog_button_icon"/>
                <TextView
                    android:text="@string/newssdk_share_dialog_text_homepage"
                    style="@style/newssdk_share_dialog_button_text"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/newssdk_sharedialog_layout_report1"
                style="@style/newssdk_share_dialog_button_layout">
                <ImageView
                    android:id="@+id/newssdk_sharedialog_button_report1"
                    android:src="@drawable/newssdk_share_button_report"
                    style="@style/newssdk_share_dialog_button_icon"/>
                <TextView
                    android:text="@string/newssdk_share_dialog_text_report"
                    style="@style/newssdk_share_dialog_button_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#e8e8e8"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/newssdk_sharedialog_button_cancelshare1"
        android:text="@string/newssdk_share_dialog_text_cancel"
        style="@style/newssdk_share_dialog_button_cancel"/>

</LinearLayout>
