<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newssdk_sharedialog_popup_root2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f4f4f4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:overScrollMode="never"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="11dp"
                android:paddingRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="125dp">
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_timeline2"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_timeline2"
                        android:background="@drawable/newssdk_share_button_timeline"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_timeline"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_wechat2"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_wechat2"
                        android:background="@drawable/newssdk_share_button_wechat"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_wechat"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_qq2"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_qq2"
                        android:background="@drawable/newssdk_share_button_qq"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_qq"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_qzone2"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_qzone2"
                        android:background="@drawable/newssdk_share_button_qqzone"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_qqzone"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_weibo2"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_weibo2"
                        android:background="@drawable/newssdk_share_button_weibo"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_weibo"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/newssdk_sharedialog_layout_whatsapp2"
                    style="@style/newssdk_share_dialog_button_layout">
                    <ImageView
                        android:id="@+id/newssdk_sharedialog_button_whatsapp2"
                        android:background="@drawable/newssdk_share_button_whatsapp"
                        style="@style/newssdk_share_dialog_button_icon"/>
                    <TextView
                        android:text="@string/newssdk_share_dialog_text_whatsapp"
                        style="@style/newssdk_share_dialog_button_text"/>
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <View
            android:layout_width="match_parent"
            android:background="#e8e8e8"
            android:layout_height="1dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="11dp"
            android:paddingRight="11dp"
            android:layout_width="match_parent"
            android:layout_height="125dp">

            <LinearLayout
                style="@style/newssdk_share_dialog_button_layout">
                <ImageView
                    android:id="@+id/newssdk_sharedialog_button_message2"
                    android:background="@drawable/newssdk_share_button_message"
                    style="@style/newssdk_share_dialog_button_icon"/>
                <TextView
                    android:text="@string/newssdk_share_dialog_text_message"
                    style="@style/newssdk_share_dialog_button_text"/>
            </LinearLayout>
            <LinearLayout
                style="@style/newssdk_share_dialog_button_layout">
                <ImageView
                    android:id="@+id/newssdk_sharedialog_button_link2"
                    android:background="@drawable/newssdk_share_button_link"
                    style="@style/newssdk_share_dialog_button_icon"/>
                <TextView
                    android:text="@string/newssdk_share_dialog_text_link"
                    style="@style/newssdk_share_dialog_button_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#e8e8e8"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/newssdk_sharedialog_button_cancelshare2"
        android:text="@string/newssdk_share_dialog_text_cancelshare"
        style="@style/newssdk_share_dialog_button_cancel"/>

</LinearLayout>
